# RIS_Lab_1

Part 2/bag files/: 2022-11-23-22-29-19.bag  2022-11-24-22-47-25.bag
Part 2/launch files/: launcher.launch  launcher_teleop_twist.launch
Part 3/: CMakeLists.txt  package.xml
Part 3/ris_lab_1/: CMakeLists.txt  README.md  thruster_manager.py
Part 3/ris_lab_1/launch/: thruster_manager_test.launch
Part 3/script files/: thruster_manager.py
Part 3/script files/ris_lab_demo_pkg/: CMakeLists.txt
Part 4/: nessie.launch  nessie_robot.launch  package.xml  robot.urdf  thrusters.py
