<?xml version="1.0"?>
<package format="2">
  <name>ris_lab_demo_pkg</name>
  <version>0.1.0</version>
  <description>For RIS Lab 1 at Jacobs University Bremen</description>

  <maintainer email="tstefanovs@jacobs-university.de">Tea Stefanovska</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>topic_tools</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  
</package>
